[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 92.0
margin_top = 200.0
margin_right = -92.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 456.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../Quit")
text = "Start"

[node name="Controls" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 456.0
margin_bottom = 44.0
text = "Controls"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 456.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../Start")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
